<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- GIF Background -->
    <ImageView
        android:id="@+id/ivBackgroundGif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_gif" />

    <!-- Gradient Background (Optional: can be removed or placed over GIF with transparency) -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"/>

    <!-- App Logo -->
    <ImageView
        android:id="@+id/ivMainLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/logo_image" />

    <!-- Discover Button -->
    <Button
        android:text="@string/discover"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_width="200dp"
        android:layout_height="50dp"/>
</RelativeLayout>